--- a/JASA/jasa.tex
+++ b/JASA/jasa.tex
@@ -55,11 +55,13 @@
 \newcommand{\Mult}{\mathrm{Mult}}
 \newcommand{\DP}{\mathrm{DP}}
 \newcommand{\IBP}{\mathrm{IBP}}
-\newcommand{\M}{\mathcal{M}}
 \newcommand{\V}{\mathcal{V}}
 \newcommand{\N}{\mathcal{N}}
 \newcommand{\mat}[1]{\mathbf{#1}}
 \newcommand{\unit}{1\!\!1}
+\newcommand{\mg}{\mathcal{M}_g}
+\newcommand{\me}{\mathcal{M}_e}
+\newcommand{\M}{\mathcal{M}}
 
 \newtheorem{definition}{Definition}[section]
 \newtheorem{lemma}{Lemma}[section]
@@ -117,11 +119,11 @@ We assess here whether standard stochastic mixed membership models are adapted f
 \input{content/models}
 \input{content/inference_context}
 \input{content/preferential}
-%\section{Predictive Context -- $M_e$}
+%\section{Predictive Context -- $me$}
 %    \input{content/me_homophily}
 %    \input{content/me_burstiness}
 %    \input{content/me_illustration}
-%\section{Generative Context -- $M_g$}
+%\section{Generative Context -- $mg$}
 %    \input{content/mg_extension} % burtisness only
 %    \input{content/mg_illustration}
 \input{content/concl.tex}
