--- a/notes/sparsity.tex
+++ b/notes/sparsity.tex
@@ -1,47 +1,14 @@
-\documentclass[a4paper, 12pt]{article}
+\documentclass{article}
 
-%\usepackage[cmex10]{amsmath, mathtools}
-\usepackage{amsmath,amssymb,amsbsy,amsfonts,amsthm}
-\usepackage{multirow}
-\usepackage{bm}
-\usepackage{enumerate}
-\usepackage{url}
-\usepackage[ruled,vlined]{algorithm2e}
-\usepackage{fancyvrb}
-\usepackage{yfonts}
-\usepackage{dsfont}
-\usepackage{calc} %    For the \widthof macro
-\usepackage{xparse} %  For \NewDocumentCommand
-\usepackage{wrapfig}
-\usepackage{tikz}
-\usepackage{lipsum}
-\usepackage{graphicx}
-\usepackage{subcaption}
-\usetikzlibrary{bayesnet}
-%\input{../tikz.conf}
-
-\newtheorem{definition}{Definition}[section]
-\newtheorem{proposition}{Proposition}[section]
-\newtheorem{theorem}{Theorem}[section]
-\newtheorem{corollary}{Corollary}[section]
-
-%%%%%%%%%%%%%%%%%%%%
-%%% Goemetry
-%%%%%%%%%%%%%%%%%%%%
-%\usepackage[margin=0.25in]{geometry}
-\usepackage{geometry}
-\geometry{
-    a4paper,
- total={420pt,700pt},
- %left=20mm,
- top=20mm,
- }
-
+\input{header2.tex}
 
 \title{On the relation between burstiness and sparsity (\emph{and small world effect ?})}
 
-\begin{document}
+\author{Adrien Dulac}
 
+
+
+\begin{document}
 \maketitle
 %\tableofcontents
 
