--- a/JASA/appendix.tex
+++ b/JASA/appendix.tex
@@ -1,20 +1,20 @@
 \section{Appendix}
 
 \begin{proof}[Proof of proposition \ref{th:me2mg}]
-for a given distribution $P$ under a model $M_g$ one has : 
-if a distribution $P$ is bursty in $\M_g$ : one has
+for a given distribution $P$ under a model $mg$ one has : 
+if a distribution $P$ is bursty in $\mg$ : one has
 \begin{equation*}
-    p(y \geq n+1 | y \geq n, \M_g) = \int_{\M_e} P(y \geq n+1 | y \geq n, \M_e) P(\M_e) d\M_e
+    p(y \geq n+1 | y \geq n, \mg) = \int_{\me} P(y \geq n+1 | y \geq n, \me) P(\me) d\me
 \end{equation*}
 
 Let's denote the discrete derivate of a function $f$  as $\Delta_n f(n) = f(n+1) -f(n)$.
 
 Concerning the burstiness of $P$ one has : 
 \begin{equation}
-    \Delta_n P(y \geq n+1 | y \geq n, \M_g) = \int_{\M_e}\Delta_n P(y \geq n+1 | y \geq n, \M_e) P(\M_e)d\M_e
+    \Delta_n P(y \geq n+1 | y \geq n, \mg) = \int_{\me}\Delta_n P(y \geq n+1 | y \geq n, \me) P(\me)d\me
 \end{equation}
 
-As $P(\M_e)$ is strictly positive, the proposition is straightforward.
+As $P(\me)$ is strictly positive, the proposition is straightforward.
 \end{proof}
 
 
@@ -26,10 +26,10 @@ One as
 $D_{ik} = \sum_{j\in\mathcal{V}} \hat f_{ik} \hat \phi_{kk} \hat f_{jk} = \hat f_{ik} \sum_{j\in\mathcal{V}} \hat \phi_{kk} \hat f_{jk}$
 
 And from $DP$ property on has
-$P(\hat f_{ik} \geq x' + \epsilon | \hat f_{ik} \geq x', \M_e)$ is increasing with $x'$
+$P(\hat f_{ik} \geq x' + \epsilon | \hat f_{ik} \geq x', \me)$ is increasing with $x'$
 
 Setting $x = x' (\sum_{j\in\mathcal{V}})$ one as that $P(D_{ik} \geq x + \epsilon | D_{ik}
-    \geq x, \M_e)$ is increasing with $x$ since $\sum_{j\in \mathcal{V}} \hat \phi_{kk}
+    \geq x, \me)$ is increasing with $x$ since $\sum_{j\in \mathcal{V}} \hat \phi_{kk}
     \hat f_{jk}$ is positive and independent of $i$. (\textcolor{red}{but it depends on
     $k$ ?})
 
@@ -56,12 +56,12 @@ As $\hat{f}_{ik}$ is binary, there is no positive reinforcement effect: $C_{i,k}
 For IMMSB : ~\\
 
 one has $C_k = \sum_{i,j \in V^2} \hat f_{ik} \hat f_{jk}$
-From the reinforcement of the DP process $C_k$ is bursty over $\M_e$.
+From the reinforcement of the DP process $C_k$ is bursty over $\me$.
 
 For ILFM : ~\\
 
 one has $C_k = \sum_{i \in V} \hat f_{ik}$
-From the reinforcement of the IBP process $C_k$ is bursty over $\M_e$.
+From the reinforcement of the IBP process $C_k$ is bursty over $\me$.
 \end{proof}
 
 
@@ -70,12 +70,12 @@ From the reinforcement of the IBP process $C_k$ is bursty over $\M_e$.
 %%% Local Preferential Attachment, MMSB, Mg.
 %%%%%%%%%%%%%%
 \begin{proof}[Proof if proposition \ref{th:ldegree_mg}]
-    Assuming exchangeability in $\M_g$ and that we have $c_k$ relation that occurs in the
+    Assuming exchangeability in $\mg$ and that we have $c_k$ relation that occurs in the
     class $k$. The probability to observe a local degree $d_{ik}$ equal to $n$ can be written as the
     union of all sequence of relations that will have $n$ edges :
 
 \begin{equation}
-    P(d_{ik}=n | \M_g) = P( \cup I_{k,n}, \cup I_{r,*})
+    P(d_{ik}=n | \mg) = P( \cup I_{k,n}, \cup I_{r,*})
 \end{equation}
 
 Where $I_{k,n}$ represents the union of all sequences of relations in the class $k$ where
@@ -87,7 +87,7 @@ Because we assume that $c_k$ is know, the size of the class $k$k is hold constan
     the sequences of relation inside $k$ and outside $k$ are independent : 
 
     \begin{equation}
-        P(d_{ik}=n | \M_g) = P( \cup I_{k,n}) P( \cup I_{r,*})
+        P(d_{ik}=n | \mg) = P( \cup I_{k,n}) P( \cup I_{r,*})
     \end{equation}
     
     From the exchangeability assumptions \textcolor{red}{Actually the exchangeability for
@@ -98,14 +98,14 @@ Because we assume that $c_k$ is know, the size of the class $k$k is hold constan
     write : 
 
 \begin{equation}
-P(d_{ik}=n | \M_g) = p(\cup I_r) \dbinom{c_k}{n} P( (y_{i0, k}=1,..,  y_{in, k}=1,
-    y_{i(n+1), k}=0,...,y_{i(c_k), k}=0) | \M_g)
+P(d_{ik}=n | \mg) = p(\cup I_r) \dbinom{c_k}{n} P( (y_{i0, k}=1,..,  y_{in, k}=1,
+    y_{i(n+1), k}=0,...,y_{i(c_k), k}=0) | \mg)
 \end{equation}
 
 Applying product rule, one has the following for any node $j$ : 
 \begin{equation} \label{eq:bb1}
     \frac{P(d_{ik} = n+1)}{P(d_{ik} = n)} = \frac{c_k - n}{n+1} \frac{P(y_{ij,k}=1
-    | Y_i^{-ij}, \M_g)}{P(y_{ij,k}=0 | Y_i^{-ij}, \M_g)}
+    | Y_i^{-ij}, \mg)}{P(y_{ij,k}=0 | Y_i^{-ij}, \mg)}
 \end{equation}
 
 Where $Y^{-ij}$ denote any sequence of relations between node $i$ and nodes  in $j \in \{0,1,..,j-1, j+1, N-1\}$,
@@ -115,8 +115,8 @@ From the bernoulli-beta compound distribution in IMMSB, one has (it is the
 gibbs sambling equations of IMMSB). : 
 
 \begin{align}
-    p(y_{ij,k}=1 | Y_i^{-ij}, \M_g) = \frac{n+ \lambda_1}{c_k + \lambda_1 + \lambda_0}\\
-    p(y_{ij,k}=0 | Y_i^{-ij}, \M_g) = \frac{c_k - n + \lambda_0}{c_k + \lambda_1 + \lambda_0}
+    p(y_{ij,k}=1 | Y_i^{-ij}, \mg) = \frac{n+ \lambda_1}{c_k + \lambda_1 + \lambda_0}\\
+    p(y_{ij,k}=0 | Y_i^{-ij}, \mg) = \frac{c_k - n + \lambda_0}{c_k + \lambda_1 + \lambda_0}
 \end{align}
 
 By plugin those identities in equation \eqref{eq:bb1}, it reduces to :
@@ -132,34 +132,34 @@ One need to evaluate the sign of the derivative of equation \eqref{eq:bb2}, thus
     &\frac{P(d_{ik} = n+2)}{P(d_{ik} = n+1)} - \frac{P(d_{ik} = n+1)}{P(d_{ik} = n)}
     = \frac{\left(c_k - n - 1\right) \left(\lambda_1 + n + 1\right)}{\left(n + 2\right) \left(c_k
     + \lambda_0 - n - 1\right)} - \frac{\left(c_k - n\right) \left(\lambda_1
-    + n\right)}{\left(n + 1\right) \left(c_k + \lambda_0 - n\right)} \\
+    + n\right)}{\left(n + 1\right) \left(c_k + \lambda_0 - n\right)} \nonumber \\
     &= \frac{ \left(n + 1\right) \left(- c_k + n + 1\right) \left(c_k
     + \lambda_0 - n\right) \left(\lambda_1 + n + 1\right) - \left(c_k - n\right) \left(\lambda_1 + n\right) \left(n + 2\right) \left(c_k
     + \lambda_0 - n - 1\right)}{\left(n + 1\right) \left(n
-    + 2\right) \left(c_k + \lambda_0 - n\right) \left(c_k + \lambda_0 - n - 1\right)} \\
-    &= \frac{n^2(1-(\lambda_1+\lambda_0))+n(2c_k(\lambda_1-1)-3\lambda_0-\lambda_1+1)+c_k^2(1-\lambda_1)+c_k(\lambda_1+\lambda_0-\lambda_1\lambda_0-1)-\lambda_1\lambda_0-\lambda_0}{\left(n + 1\right) \left(n + 2\right) \left(c_k + \lambda_0 - n\right) \left(c_k + \lambda_0 - n - 1\right)}
+    + 2\right) \left(c_k + \lambda_0 - n\right) \left(c_k + \lambda_0 - n - 1\right)} \nonumber \\
+    &= \frac{1}{\left(n + 1\right) \left(n + 2\right) \left(c_k + \lambda_0 - n\right) \left(c_k + \lambda_0 - n - 1\right)} \biggl(n^2(1-(\lambda_1+\lambda_0))+n(2c_k(\lambda_1-1) \nonumber \\
+    & \qquad \qquad  -3\lambda_0-\lambda_1+1) +c_k^2(1-\lambda_1)+c_k(\lambda_1+\lambda_0-\lambda_1\lambda_0-1)-\lambda_1\lambda_0-\lambda_0 \biggr)
 \end{align}
 
-We know that $n < c_k -2$, thus the denominator is always positive. If $n >> 0$, the
-burstiness is satisfy if $\lambda_0+\lambda_1 < 0$, otherwise it depends on the values of
+We know that $n < c_k -2$, thus the denominator is always positive. Note also that if  $c_k >> n >> 0$, the
+burstiness is satisfy if $\lambda_1 < 1$, otherwise it depends on the values of
 the zeros of the polynomial. The solution of the zeros of the numerator are given by the following equations : 
 
 \begin{multline} \label{eq:sqrt1}
-n_{1/2} =  \frac{1}{2 \left(\lambda_1 + \lambda_0 - 1\right)} \biggl(2 c_k \lambda_1
-    - 2 c_k - \lambda_1 - 3 \lambda_0 \pm \\
-\sqrt{- 4 c_k^{2} \lambda_1 \lambda_0 + 4 c_k^{2} \lambda_0 - 4 c_k \lambda_1^{2}
-    \lambda_0 - 4 c_k \lambda_1 \lambda_0^{2} + 4 c_k \lambda_0^{2} + 4 c_k \lambda_0
+    n_{1/2} =  \frac{1}{2 \left(1 -(\lambda_1 + \lambda_0)\right)} \biggl(2 c_k (1-\lambda_1
+    ) + \lambda_1 + 3 \lambda_0 -1 \pm 
+    \biggl( 4 c_k^{2}\lambda_0(1 -  \lambda_1) 
+    - 4 c_k  (\lambda_1^{2} \lambda_0 - \lambda_1 \lambda_0^{2} + \lambda_0^{2} + \lambda_0 ) \\
     - 4 \lambda_1^{2} \lambda_0 + \lambda_1^{2} - 4 \lambda_1 \lambda_0^{2} + 6 \lambda_1
-    \lambda_0 - 2 \lambda_1 + 5 \lambda_0^{2} - 2 \lambda_0 + 1} + 1\biggr) 
+    \lambda_0 - 2 \lambda_1 + 5 \lambda_0^{2} - 2 \lambda_0 + 1\biggr)^{\frac{1}{2}}\biggr) 
 \end{multline}
 
-In order to obtain a solution not in an imaginary space, one can look for the constraint over
-$c_k$ to obtain positive values in the square root of \eqref{eq:sqrt1}. It can be show
-that the solution of the polynomial in the square root of equation \eqref{eq:sqrt1} are : 
+Here, when $c_k >> 0$ the square is positive if $\lambda_1 < 1$ and admits a positive solution if $\lambda_1 + \lambda_0 < 1$. In order to obtain a solution not in an imaginary space, one can look for the constraint over
+$c_k$ to obtain positive values in the square root of \eqref{eq:sqrt1}. Then the solution of the polynomial in the square root of equation \eqref{eq:sqrt1} are : 
 
 \begin{align}
-    c_{k,1/2} = \frac{1}{2 \lambda_0 \left(\lambda_1 - 1\right)} \left(- \lambda_0 \left(\lambda_1 - 1\right) \left(\lambda_1
-    + \lambda_0 + 1\right) \pm \sqrt{\lambda_0 \left(\lambda_1 - 1\right) \left(\lambda_1 \lambda_0 - \lambda_0 + 1\right)} \left(\lambda_1 + \lambda_0 - 1\right)\right) 
+    c_{k,1/2} = \frac{1}{2} \left(-  \left(\lambda_1
+    + \lambda_0 + 1\right) \pm \sqrt{\frac{\left(\lambda_0(\lambda_1 - 1) + 1\right)}{\lambda_0 \left(\lambda_1 - 1\right)}} \left(\lambda_1 + \lambda_0 - 1\right)\right) 
 \end{align}
 
 \end{proof}
