--- a/JASA/table/preferential_attachment.tex
+++ b/JASA/table/preferential_attachment.tex
@@ -1,4 +1,3 @@
-
 \begin{table}[th]
 \caption{Preferential attachment measures for training datasets and networks generated with fitted models.}
 \centering
@@ -16,19 +15,20 @@ Manufacturing  & 0 & 1.4 &   0.4 $\pm$ 0.3  &  1.3 $\pm$ 0.05 \\
 
   \ \textbf{\imb} &&&& \\
 \hline
-Network1       & 0.9 & 1.4 &   1.0 \(\pm\) 0.0   &  3.5 \(\pm\) 0.7 \\
-Network2       & 0 & 1.3 &   0.9 \(\pm\) 0.0   &  1.6 \(\pm\) 0.2 \\
-Blogs          & 1 & 1.3 &   1.0 \(\pm\) 0.0   &  4.3 \(\pm\) 1.1 \\
-Manufacturing  & 0 & 1.2 &   0.9 \(\pm\) 0.01  &  1.6 \(\pm\) 0.1 \\
+Network1       & 0.9 & 1.4 & \textbf{1.0} \(\pm\) 0.0   &  \textbf{3.5} \(\pm\) 0.7 \\
+Network2       & 0 & 1.3 &   \textbf{0.9} \(\pm\) 0.0   &  1.6 \(\pm\) 0.2 \\
+Blogs          & 1 & 1.3 &   \textbf{1.0} \(\pm\) 0.0   &  \textbf{4.3} \(\pm\) 1.1 \\
+Manufacturing  & 0 & 1.2 &   $\bm{0.9}$ \(\pm\) 0.01 \hspace{-1em}  &  1.6 \(\pm\) 0.1 \\
 \hline
 
-  \ \textbf{\ifm} &&&& \\
+  \ \textbf{\ilfm} &&&& \\
 \hline
-Network1      & 1 & 1.4 &   1.0 \(\pm\) 0.0  &  1.7 \(\pm\) 0.1 \\
+Network1      & 1 & 1.4 &   \textbf{1.0} \(\pm\) 0.0  &  1.7 \(\pm\) 0.1 \\
 Network2      & 0 & 1.2 &   0.0 \(\pm\) 0.0 &  1.2 \(\pm\) 0.0 \\
-Blogs         & 1 & 1.3 &   0.9 \(\pm\) 0.2  &  1.5 \(\pm\) 0.1 \\
+Blogs         & 1 & 1.3 &  \textbf{0.9} \(\pm\) 0.2  &  1.5 \(\pm\) 0.1 \\
 Manufacturing & 0 & 1.2 &   0.3 \(\pm\) 0.3  &  1.3 \(\pm\) 0.0 \\
 \hline
 \end{tabular}
+}
 \label{table:me_gofit}
 \end{table}
