--- a/Marami/marami.tex
+++ b/Marami/marami.tex
@@ -123,10 +123,10 @@
 
 Plusieurs modèles de prédiction de liens puissants ont été proposés dans la littérature pour apporter une solution au problème dit de \textit{prédiction de liens} consistant à prédire la probabilité d'une relation entre deux n\oe{}uds quelconques dans un réseau social \cite{LibenNowell07, HassanZaki11}.
 Parmi ces modèles, la classe des modèles \mmm a reçu une attention particulière due à leur capacité à faire émerger la structure d'un réseau et à inférer des liens non observés.
-Deux instances principales de cette classe ont été proposées et étudiées  dans la littérature : le modèle à composition mixte de bloc (MMSB) \cite{MMSB} et son extension non-paramétrique \cite{iMMSB, fan2015dynamic} d'un côté et le modèle à attributs latents (ILFM) \cite{BMF} et son extension non-paramétrique \cite{ILFRM} de l'autre. 
+Deux instances principales de cette classe ont été proposées et étudiées  dans la littérature : le modèle à composition mixte de bloc (MMSB) \cite{MMSB} et son extension non-paramétrique (IMMSB) \cite{iMMSB, fan2015dynamic} d'un côté et le modèle à attributs latents (IFM) \cite{BMF} et son extension non-paramétrique (ILFM) \cite{ILFRM} de l'autre. 
 
 
-Les modèles probabilistes, tels que ceux considérés sont usuellement évalués empiriquement. Néanmoins, les réseaux sociaux réels exhibent des propriétés générales qui permettent de les caractériser. Dans cette étude, nous traitons deux propriétés importantes, \textit{l'homophilie} et \textit{l'attachement préférentiel} \cite{ Barabasi2003}. Nous étudions dans quelle mesure les modèles de prédiction de liens, de la classe mentionnée, s'y conforment.
+Les modèles probabilistes, tels que ceux considérés sont usuellement évalués empiriquement mais leurs propriétés théoriques rarement étudiées. Or, les réseaux sociaux réels exhibent des propriétés générales qui permettent de les caractériser. Dans cette étude, nous traitons deux propriétés importantes, \textit{l'homophilie} et \textit{l'attachement préférentiel} \cite{ Barabasi2003}. Nous étudions dans quelle mesure les modèles de prédiction de liens, de la classe mentionnée, s'y conforment.
 
 L'homophilie est une propriété selon laquelle la probabilité que deux n\oe{}uds du réseau soient liés augmente avec leurs similarités et qui est communément suggérer par la locution \emph{"qui se ressemble s'assemble"}.
 
@@ -186,7 +186,7 @@ La section suivante est consacrée à l'analyse  de ces propriétés pour les mo
 \section{Homophilie: \emph{"Birds of a feather flock together"}}
 \label{sec:homophily}
 
-L'homophilie réfère à la tendance des individus à se connecter à d'autres avec qui ils partagent certaines caractéristiques telles que un statut, des préférences ou intérêts \cite{mcpherson2001birds,lazarsfeld1954friendship}.   Une notion proche est celle d'\emph{assortativité}, qui est plus générale et s'applique à tous types de réseaux, pas seulement sociaux, et qui renvoit à la tendance à se connecter à des individus similaires.
+L'homophilie réfère à la tendance des individus à se connecter à d'autres avec qui ils partagent certaines caractéristiques telles qu'un statut, des préférences ou intérêts \cite{mcpherson2001birds,lazarsfeld1954friendship}.   Une notion proche est celle d'\emph{assortativité}, qui est plus générale et s'applique à tous types de réseaux, pas seulement sociaux, et qui renvoit à la tendance à se connecter à des individus similaires.
 
 
 Une définition de l'homophilie a été proposée par \cite{la2010randomization}. Cependant, cette définition considère une seule caractéristique (ie l'âge ou le genre), et ne peut donc pas s'appliquer dans le cadre de modèles \mmm. Nous proposons donc de définir l'homophile comme suit : 
@@ -203,7 +203,7 @@ s(i,j) > s(i',j')  \implies \pr(y_{ij}=1 \mid \mathcal{M}_e) > \pr(y_{i'j'}=1  \
 Différentes similarités peuvent être considérées, tant qu'elles sont basées sur la mesure des propriétés des n\oe{}uds considérés.  Dans les modèles \mmm, ces propriétés ne sont pas directement observées, et sont encodées dans les caractéristiques latentes. D'après les paramètres des modèles, nous défissons la notion de similarité naturelle comme étant $s_n(i,j) = \mat{\hat{f}}_{i} \mat{\hat{\Phi}} \mat{\hat{f}}_j^\top$.
 
 
-On peut voir que \ilfm~  et \immsb, dans le contexte $\mathcal{M}_e$ sont homophiliques avec le respect de $s_n$. En effet, $\pr(y_{ij}=1 \mid \mathcal{M}_e)$ augmente avec $s_n$  pour  \ilfm\ comme la fonction sigmoïde est strictement croissante. De plus, en marginalisant sur les paramètres $z$ dans \immsb\ on a :
+On peut voir que \ilfm~  et \immsb, dans le contexte $\mathcal{M}_e$ sont homophiliques avec la similarité $s_n$. En effet, $\pr(y_{ij}=1 \mid \mathcal{M}_e)$ augmente avec $s_n$  pour  \ilfm\ comme la fonction sigmoïde est strictement croissante. De plus, en marginalisant sur les paramètres $z$ dans \immsb\ on a :
 \begin{align}
     \pr(y_{ij} =1 \mid \mathcal{M}_e) & = \sum_{k,k'} \pr(y_{ij}=1|\mathcal{M}_e) \pr(z_{i \rightarrow j}=k | \mathcal{M}_e) \pr(z_{i \leftarrow j}=k' | \mathcal{M}_e) \nonumber \\
 & = \sum_{k,k'} \hat{\phi}_{k,k'} \hat{f}_{ik} \hat{f}_{jk'} = \mat{\hat{f}}_{i} \mat{\hat{\Phi}} \mat{\hat{f}}_j^\top \nonumber
@@ -224,7 +224,7 @@ Cela montre que, pour qu'un modèle soit homophilique, il doit être conçu en f
 \label{sec:burstiness}
 
 
-L'attachement préférentiel est une propriété d'un réseau selon laquelle la probabilité qu'un n\oe{}ud crée un lien avec un autre augmente avec le nombre de liens déjà établis par ce dernier (son degré). Cette propriété est liée à un phénomène plus général appelé \textit{burstiness} \footnote{A.L. Barab\'asi, par exemple, utilise ce terme \textit{attachement préférentiel} in \cite{barabasi1999emergence}, et \textit{burstiness} dans \cite{barabasi_burst}.} qui décrit le fait que certains évènements apparaissent en "rafale", c'est à dire qu'une fois qu'ils apparaissent ils ont plus de chance d'apparaître encore. La burstiness a été étudiée dans différents domaines, notamment en traitement automatique du langage et en recherche d'information afin de caractériser l'occurrence des mots \cite{church1995poisson}. Des définitions simples du burstiness ont été proposées \cite{clinchant2008bnb,clinchant2010information}, pour les distributions continues et discrètes, qui capturent le fait que la probabilité de nouvelles occurrences d'un évènement augmente avec le nombre d'occurrences de cet évènement. Nous adaptons ici ces définitions pour l'attachement préférentiel dans les réseaux. De plus, le phénomène peut apparaître à différent niveaux du réseau : (a) l'attachement préférentiel global traite du degré sur l'ensemble des n\oe{}uds et (b) l'attachement préférentiel local traite le degré au sein d'une classe :
+L'attachement préférentiel est une propriété d'un réseau selon laquelle la probabilité qu'un n\oe{}ud crée un lien avec un autre augmente avec le nombre de liens déjà établis par ce dernier (son degré). Cette propriété est liée à un phénomène plus général appelé \textit{burstiness} \footnote{A.L. Barab\'asi, par exemple, utilise ce terme \textit{attachement préférentiel} in \cite{barabasi1999emergence}, et \textit{burstiness} dans \cite{barabasi_burst}.} qui décrit le fait que certains évènements apparaissent en "rafale", c'est à dire qu'une fois qu'ils apparaissent ils ont plus de chance d'apparaître encore. La burstiness a été étudiée dans différents domaines, notamment en traitement automatique du langage et en recherche d'information afin de caractériser l'occurrence des mots \cite{church1995poisson}. Des définitions simples du burstiness ont été proposées \cite{clinchant2008bnb,clinchant2010information}, pour les distributions continues et discrètes, qui capturent le fait que la probabilité de nouvelles occurrences d'un évènement augmente avec le nombre d'occurrences de cet évènement. Nous adaptons ici ces définitions pour l'attachement préférentiel dans les réseaux. De plus, ce phénomène peut apparaître à différent niveaux du réseau : (a) l'attachement préférentiel global traite du degré sur l'ensemble des n\oe{}uds et (b) l'attachement préférentiel local traite le degré au sein d'une classe :
 
 
 \begin{definition}[Attachement préférentiel]
